[package]
name = "c8rust"
version = "0.1.0"
authors = ["kehitt <kehitt@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
rand = "0.8"
winit = "0.25.0"
wgpu = "0.10.1"
cpal = "0.13.4"
pollster = "0.2.4"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
spin_sleep = "1.0.0"

[dev-dependencies]
proptest = "1.0.0"

[profile.release]
debug = true